--- a/TheatreBlogAssessment/TheatreBlogAssessment.csproj
+++ b/TheatreBlogAssessment/TheatreBlogAssessment.csproj
@@ -171,7 +171,6 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\StaffController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -263,6 +262,7 @@
     <Content Include="Views\Admin\ChangeRole.cshtml" />
     <Content Include="Views\Home\CreateComment.cshtml" />
     <Content Include="Views\Home\Approve.cshtml" />
+    <Content Include="Views\Home\EditComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
