--- a/TheatreBlogAssessment/TheatreBlogAssessment.csproj
+++ b/TheatreBlogAssessment/TheatreBlogAssessment.csproj
@@ -262,6 +262,8 @@
     <Content Include="Views\Home\CreateComment.cshtml" />
     <Content Include="Views\Home\Approve.cshtml" />
     <Content Include="Views\Home\EditComment.cshtml" />
+    <Content Include="Views\Home\DeleteComment.cshtml" />
+    <Content Include="Views\Admin\ViewAllPosts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
