--- a/TheatreBlogAssessment/TheatreBlogAssessment.csproj
+++ b/TheatreBlogAssessment/TheatreBlogAssessment.csproj
@@ -180,7 +180,6 @@
     <Compile Include="Models\ChangeRoleViewModel.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\DatabaseInitializer.cs" />
-    <Compile Include="Models\EditUserDetailsViewModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Post.cs" />
@@ -223,8 +222,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -266,6 +263,7 @@
     <Content Include="Views\Home\EditComment.cshtml" />
     <Content Include="Views\Home\DeleteComment.cshtml" />
     <Content Include="Views\Admin\ViewAllPosts.cshtml" />
+    <Content Include="Views\Home\EditDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
